--- a/1.1.2 文件权限管理.md
+++ b/1.1.2 文件权限管理.md
@@ -32,6 +32,8 @@ ls -l /boot/
 
 >chmod命令用于修改文件权限mode，-R参数以递归方式对子目录和文件进行修改
 
+其中，u+x表示增加属主的执行权限，u表示属主，g表示属组，o表示其他，a表示所有用户
+
 1.  新建名为hello.sh的Shell脚本，该脚本将会输出Hello World。用ll命令可以看到新建的脚本没有执行权限，其权限用八进制表示为644。
 
 ```
@@ -44,4 +46,24 @@ ll
 ```
 chmod u+x hello.sh
 ll
+```
+
+3.  将hello.sh文件撤销属主的执行权限。
+
+```
+chmod u-x hello.sh
+ll
+```
+
+4.  将hello.sh文件权限修改为八进制表示的744权限。
+
+```
+chmod 744 hello.sh
+ll
+```
+
+5.  使用bash命令解释器执行hello.sh脚本文件。
+
+```
+/bin/bash hello.sh
 ```
