--- a/1.1.2 文件权限管理.md
+++ b/1.1.2 文件权限管理.md
@@ -67,3 +67,39 @@ ll
 ```
 /bin/bash hello.sh
 ```
+
+
+
+## 2.chown
+>chown命令修改文件的属主和属组；-R参数以递归方式对子目录和文件进行修改；  
+ls -l命令显示的第三列和第四列就是文件的属主和属组信息。
+
+1.  新建一个文本文件test.txt，用ll命令可以看到该文件的属主和属组是root。  
+    whoami命令可以查看当前Shell环境登录的用户名。
+
+```
+whoami
+touch test.txt
+ll
+```
+
+2. 创建两个用户。
+
+```
+useradd test
+useradd admin
+```
+
+3.  修改test.txt文件的属主用户为test。
+
+```
+chown test test.txt
+ll
+```
+
+4.  修改test.txt文件的属主和属组为admin。
+
+```
+chown admin:admin test.txt
+ll
+```
