--- a/1.1.2 文件权限管理.md
+++ b/1.1.2 文件权限管理.md
@@ -103,3 +103,14 @@ ll
 chown admin:admin test.txt
 ll
 ```
+
+## 3.chgrp
+
+>chgrp命令用于修改文件的属组。
+
+```
+将test.txt文件的属组改为root。
+
+chgrp root test.txt
+ll
+```
