--- a/1.1.3 文本编辑工具Vim.md
+++ b/1.1.3 文本编辑工具Vim.md
@@ -49,3 +49,30 @@
 整行将向左退回	<<
 若档案没有更动，则不储存离开，若档案已经被更动过，则储存后离开	ZZ
 ```
+
+- 输入模式
+
+在命令模式下按i或a键就进入了输入模式，在输入模式下，您可以正常的使用键盘按键对文本进行插入和删除等操作。
+
+- 底线命令模式
+
+在命令模式下按:键就进入了底线命令模式，在底线命令模式中可以输入单个或多个字符的命令。
+
+以下是底线命令模式中常用的快捷操作：
+
+```
+操作	命令
+保存	:w
+退出	:q
+保存并退出	:wq（:wq!表示强制保存退出）
+将文件另存为其他文件名	:w new_filename
+显示行号	:set nu
+取消行号	:set nonu
+使本行内容居中	:ce
+使本行文本靠右	:ri
+使本行内容靠左	:le
+向光标之下寻找一个名称为word的字符串	:/word
+向光标之上寻找一个字符串名称为word的字符串	:?word
+重复前一个搜寻的动作	:n
+从第一行到最后一行寻找word1字符串，并将该字符串取代为word2	:1,$s/word1/word2/g或 :%s/word1/word2/g
+```
