--- a/1.1.4 文本文件查看命令.md
+++ b/1.1.4 文本文件查看命令.md
@@ -35,11 +35,66 @@ cat /dev/null > test.txt
 
 ## 2.more
 
+>more命令从前向后分页显示文件内容。
+
+常用操作命令：
+
+```
+操作	作用
+Enter	向下n行，n需要定义，默认为1行
+Ctrl+F或空格键（Space）	向下滚动一页
+Ctrl+B	向上滚动一页
+=	输出当前行的行号
+!命令	调用Shell执行命令
+q	退出more
+```
+
+命令使用示例：
+
+从第20行开始分页查看系统日志文件/var/log/messages。
+
+```
+more +20 /var/log/messages
+```
 
 ## 3.less
+>less命令可以对文件或其它输出进行分页显示，与moe命令相似，但使用 less 可以随意浏览文件，而 more 仅能向前移动，却不能向后移动。
 
+命令参数说明：
+
+```
+参数	说明
+-e	当文件显示结束后，自动离开
+-m	显示类似more命令的百分比
+-N	显示每行的行号
+-s	显示连续空行为一行
+命令常用操作：
+
+快捷键	说明
+/字符串	向下搜索字符串
+?字符串	向上搜索字符串
+n	重复前一个搜索
+N	反向重复前一个搜索
+b或pageup键	向上翻一页
+空格键或pagedown键	向下翻一页
+u	向前翻半页
+d	向后翻半页
+y	向前滚动一行
+回车键	向后滚动一行
+q	退出less命令
+```
+
+命令使用示例：
+
+查看命令历史使用记录并通过less分页显示。
+
+```
+history | less
+```
 
 ## 4.head
+>head命令用于查看文件开头指定行数的内容
+
 
 
 ## 5.tail
