--- a/1.1.4 文本文件查看命令.md
+++ b/1.1.4 文本文件查看命令.md
@@ -95,6 +95,42 @@ history | less
 ## 4.head
 >head命令用于查看文件开头指定行数的内容
 
+命令参数说明：
 
+```
+参数	说明
+-n [行数]	显示开头指定行的文件内容，默认为10
+-c [字符数]	显示开头指定个数的字符数
+-q	不显示文件名字信息，适用于多个文件，多文件时默认会显示文件名
+```
+
+命令使用示例：
+
+查看/etc/passwd文件的前5行内容。
+
+```
+head -5 /etc/passwd
+```
 
 ## 5.tail
+
+>tail命令用于查看文档的后N行或持续刷新内容
+
+命令参数说明：
+
+```
+参数	说明
+-f	显示文件最新追加的内容
+-q	当有多个文件参数时，不输出各个文件名
+-v	当有多个文件参数时，总是输出各个文件名
+-c [字节数]	显示文件的尾部n个字节内容
+-n [行数]	显示文件的尾部n行内容
+```
+
+命令使用示例：
+
+查看/var/log/messages系统日志文件的最新10行，并保持实时刷新。
+
+```
+tail -f -n 10 /var/log/messages
+```
