--- a/1.1.4 文本文件查看命令.md
+++ b/1.1.4 文本文件查看命令.md
@@ -134,3 +134,62 @@ head -5 /etc/passwd
 ```
 tail -f -n 10 /var/log/messages
 ```
+
+## 6.stat
+
+>用来显示文件的详细信息，包括inode、atime、mtime、ctime等
+
+```
+#查看/etc/passwd文件的详细信息。
+
+stat /etc/passwd
+```
+
+
+## 7.wc
+>wc命令用于统计指定文本的行数、字数、字节数
+
+```
+命令参数说明：
+
+参数	说明
+-l	只显示行数
+-w	只显示单词数
+-c	只显示字节数
+命令使用示例：
+
+统计/etc/passwd文件的行数。
+
+wc -l /etc/passwd
+```
+
+
+
+## 8.file
+>file命令用于辨识文件类型
+
+```
+命令参数说明：
+
+参数	说明
+-b	列出辨识结果时，不显示文件名称
+-c	详细显示指令执行过程，便于排错或分析程序执行的情形
+-f [文件]	指定名称文件，其内容有一个或多个文件名称时，让file依序辨识这些文件，格式为每列一个文件名称
+-L	直接显示符号连接所指向的文件类别
+命令使用示例：
+
+查看/var/log/messages文件的文件类型。
+
+file /var/log/messages
+```
+
+## 9.diff
+
+>diff命令用于比较文件的差异。
+
+
+```
+# 使用diff查看两个文件的差异
+
+diff 1.log 2.log
+```
