--- a/1.1.5 常用系统工作命令.md
+++ b/1.1.5 常用系统工作命令.md
@@ -93,6 +93,44 @@ yum -y install ntp
 ntpdate time.nist.gov
 ```
 
+## 3.wget
+
+>在终端中下载文件
+
+```
+参数说明：
+
+参数	作用
+-b	后台下载
+-P	下载到指定目录
+-t	最大重试次数
+-c	断点续传
+-p	下载页面内所有资源，包括图片、视频等
+-r	递归下载
+命令使用示例：
+
+下载一张图片到路径/root/static/img/中，-p参数默认值为当前路径，如果指定路径不存在会自动创建。
+
+wget -P /root/static/img/ http://img.alicdn.com/tfs/TB1.R._t7L0gK0jSZFxXXXWHVXa-2666-1500.png
+```
+
+## 4.ps
+>ps命令用于查看系统中的进程状态。
+
+```
 
 
+命令格式：ps [参数]。
 
+命令参数说明：
+参数	作用
+-a	显示现行终端机下的所有程序，包括其他用户的程序
+-u	以用户为主的格式来显示程序状况
+-x	显示没有控制终端的进程，同时显示各个命令的具体路径
+-e	列出程序时，显示每个程序所使用的环境变量
+-f	显示当前所有的进程
+-t	指定终端机编号，并列出属于该终端机的程序的状况
+命令使用示例：
+
+ps -ef | grep sshd
+```
