--- a/1.1.5 常用系统工作命令.md
+++ b/1.1.5 常用系统工作命令.md
@@ -134,3 +134,28 @@ wget -P /root/static/img/ http://img.alicdn.com/tfs/TB1.R._t7L0gK0jSZFxXXXWHVXa-
 
 ps -ef | grep sshd
 ```
+
+## 5.top
+>命令描述：top命令动态地监视进程活动与系统负载等信息。
+
+```
+top
+```
+
+## 6.pidof
+>命令描述：pidof命令用于查询指定服务进程的PID值。
+
+```
+命令参数说明：
+
+参数	说明
+-s	仅返回一个进程号
+-c	只显示运行在root目录下的进程，这个选项只对root用户有效
+-o	忽略指定进程号的进程
+-x	显示由脚本开启的进程
+命令使用示例：
+
+查询出crond服务下的所有进程ID。
+
+pidof crond
+```
