--- a/1.1.5 常用系统工作命令.md
+++ b/1.1.5 常用系统工作命令.md
@@ -159,3 +159,31 @@ top
 
 pidof crond
 ```
+
+## 7.kill
+>命令描述：kill命令用于终止指定PID的服务进程。
+
+kill可将指定的信息送至程序。预设的信息为SIGTERM(15)，可将指定程序终止。
+
+若仍无法终止该程序，可使用SIGKILL(9)信息尝试强制删除程序。
+
+```
+
+命令使用示例：
+
+删除pid为1247的进程。
+
+kill -9 1247
+```
+
+## 8.killall
+>命令描述：killall命令用于终止指定名称的服务对应的全部进程。
+
+```
+
+命令使用示例：
+
+删除crond服务下的所有进程。
+
+killall crond
+```
