--- a/1.1.5 常用系统工作命令.md
+++ b/1.1.5 常用系统工作命令.md
@@ -177,6 +177,7 @@ kill -9 1247
 ```
 
 ## 8.killall
+
 >命令描述：killall命令用于终止指定名称的服务对应的全部进程。
 
 ```
@@ -186,4 +187,29 @@ kill -9 1247
 删除crond服务下的所有进程。
 
 killall crond
+```
+
+## 9.reboot
+>命令描述：reboot命令用来重启系统。
+
+```
+命令参数说明：
+
+-n：保存数据后再重新启动系统。
+-w：仅做测试，并不是真的将系统重新开机，只会把重新开机的数据写入记录文件/var/log/wtmp。
+-d：重新启动时不把数据写入记录文件/var/tmp/wtmp。
+-f：强制重新开机，不调用shutdown指令的功能。
+-i：关闭网络设置之后再重新启动系统。
+命令使用示例：
+
+reboot
+
+```
+## 10.poweroff
+>命令描述：poweroff命令用来关闭系统。
+
+```
+命令使用示例：
+
+poweroff
 ```
